fixed graph on mobile

--- a/front-end/src/styles/App.scss
+++ b/front-end/src/styles/App.scss
@@ -42,7 +42,7 @@ body {
   }
   .btn-toggle {
     cursor: pointer;
-    width: 35px;
+    min-width: 35px;
     height: 35px;
     background: #353535;
     color: #fff;
